--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
 }
 h1{
   padding: 2rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+  color: rgb(234, 62, 90);
+  text-shadow: 2px 4px black;
 }
 #input{
   font-size: 1.5rem;
@@ -24,7 +27,7 @@ h1{
   padding: 0.1rem ;
 }
 #input button{
-  background-color: greenyellow;
+  background-color: rgb(73, 248, 85);
   font-size: 1rem;
   font-weight: 600;
   border-radius: 20px;
